# SPDX-License-Identifier: Apache-2.0 OR MIT
[package]
name = "axonos-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Denis Yermakou <axonosorg@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Public SDK for AxonOS — typed intent events, capability declarations, and mesh consent integration for brain-computer interface applications."
documentation = "https://docs.rs/axonos-sdk"
repository = "https://github.com/AxonOS-org/axonos-sdk"
homepage = "https://axonos.org"
readme = "README.md"
keywords = ["bci", "neurotech", "embedded", "consent", "no-std"]
categories = ["embedded", "no-std", "hardware-support", "science"]

[lib]
name = "axonos_sdk"
path = "src/lib.rs"

[features]
# Default: no_std, no allocator, suitable for Cortex-M targets.
default = []

# Enable std-only features (std::error::Error, thiserror derives, collections).
std = ["dep:thiserror", "dep_alloc"]

# Enable heap allocation (via `alloc` crate) without requiring std.
# Useful on targets like Cortex-M33 with a global allocator.
alloc = ["dep_alloc"]

# Enable serde serialization for intent events (JSON / CBOR wire formats).
serde = ["dep:serde", "dep:serde_repr"]

# Enable zero-copy deserialization helpers.
zerocopy = ["dep:zerocopy"]

# Internal helper to select alloc in both std and explicit-alloc paths.
dep_alloc = []

[dependencies]
# Typed error taxonomy — always compiled, thiserror only in std.
thiserror = { version = "2.0", optional = true }
# Wire format support (optional, feature-gated).
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_repr = { version = "0.1", optional = true }
# Zero-copy primitives for FFI + ring buffers.
zerocopy = { version = "0.8", features = ["derive"], optional = true }
# Stable hash identifiers.
siphasher = { version = "1.0", default-features = false }
# Fixed-size collections for no_std paths.
heapless = "0.8"

[dev-dependencies]
# Integration test runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
# Property-based testing for state machines.
proptest = "1.5"
# Criterion for benchmarks.
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "intent_throughput"
harness = false

[[example]]
name = "hello_intent"
required-features = ["std"]

[[example]]
name = "mind_cursor"
required-features = ["std", "serde"]

[[example]]
name = "focus_monitor"
required-features = ["std"]

[[example]]
name = "mesh_coupling"
required-features = ["std", "serde"]

[[example]]
name = "bare_metal_no_std"
required-features = ["std"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true  # for DWARF in release (needed for post-mortem on embedded)
overflow-checks = true  # cheap in release on Cortex-M, catches arithmetic bugs

[profile.bench]
debug = true
lto = "fat"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "thumbv7em-none-eabihf", "thumbv8m.main-none-eabihf"]
